--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "cache-manager": "^6.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "decimal.js": "^10.5.0",
     "envalid": "^8.0.0",
     "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
@@ -65,7 +66,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "5.8.3"
+    "typescript": "^5.8.3"
   },
   "resolutions": {
     "**/string-width": "4.2.3"
